# visualizer

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  visualizer
binaries/: bin
src/: args.rs  data.rs  draw_func.rs  draw_func_ansi.rs  draw_func_color.rs  draw_func_colorbar.rs  draw_func_mandelbrot.rs  draw_func_newton.rs  draw_image.rs  draw_lib.rs  draw_term.rs  lib.rs  library.rs  main.rs
